apps/newsapp/kube/istio/app-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
   name: newsapp-ingress-dst-rule
   namespace: newsapp-ns

spec:
   host: newsapp-svc-python
   trafficPolicy:
      loadBalancer:
         simple: LEAST_CONN
   subsets:
      - name: NewsAppAppLeastConn
        labels:
           app: newsapp
           lang: python
