apps/newsapp/kube/istio/app-vs-weight.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: newsapp-ingress-vs-weight
   namespace: newsapp-ns

spec:
   hosts:
   - "*"
   gateways:
   - newsapp-ingress
   http:
   - match:
     - uri:
        exact: /random
     rewrite:
        uri: /
     route:
     - destination:
        host: newsapp-svc-python
        port:
            number: 8081
       weight: 25
     - destination:
        host: newsapp-svc-go
        port:
            number: 80
       weight: 50
     - destination:
        host: newsapp-svc-nodejs
        port:
            number: 80
       weight: 25
