apps/newsapp/kube/istio/app-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: newsapp-ingress-vs
   namespace: newsapp-ns

spec:
   hosts:
   - "*"
   gateways:
   - newsapp-ingress
   http:
   - match:
     - uri:
        prefix: /python
     route:
     - destination:
        host: newsapp-svc-python.newsapp-ns.svc.cluster.local
        port: 
            number: 5000
        subset: NewsAppAppLeastConn
     rewrite:
        uri: " "
   - match:
     - uri:
        prefix: /nodejs
     route:
     - destination:
        host: newsapp-svc-nodejs.newsapp-ns.svc.cluster.local
        port: 
            number: 3000
     rewrite:
        uri: " "
